@@ -1,3 +1,8 @@
+2003-11-04  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/flash.c (find_free): Better handling of end address - otherwise
+	list of free blocks could be incorrect.  Thanks to Chris Garry.
+
 2003-11-01  Gary Thomas  <gary@mlbassoc.com>
 
 	* cdl/redboot.cdl: Reorg to allow disk operations on other than
